--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+body{
+    background: #ececec;
+}
+
 .wrap{
     padding:0 30px;
 }
@@ -11,5 +15,34 @@
 
 .index-card:hover{
     border:1px solid #e66;
+}
+.index-card p{
+    color: #000;
+}
+
+.index-card p:hover{
+    color: #e66;
+}
+
+
+.container{
+    max-width: 1440px;
+    margin:0 auto;
+}
+
+.border-1{
+    border:1px solid #e3e3e3;
+    padding: 30px;
+    margin-bottom:30px;
+    background: #ffffff;
+}
+
+.title{
+    padding-left: 20px;
+    height: 50px;
+    line-height: 50px;
+    background: #3bb4f2;
+    margin-bottom: 20px;
     color: #ffffff;
+
 }
