--- a/public/css/index.css
+++ b/public/css/index.css
@@ -42,6 +42,7 @@ body{
 
 .title{
     padding-left: 20px;
+    padding-right: 20px;
     height: 50px;
     line-height: 50px;
     background: #3bb4f2;
